--- a/src-React/src/index.html
+++ b/src-React/src/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id="body"></div>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="index.js" type="module"></script>
 </body>
 
