--- a/src-React/src/index.html
+++ b/src-React/src/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <div id="body"></div>
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <link href="https://unpkg.com/react-image-crop/dist/ReactCrop.css" rel="stylesheet" />
+    <script src="https://unpkg.com/react-image-crop/dist/index.umd.cjs"></script>
+
     <script src="index.js" type="module"></script>
 </body>
 
